# camera-esp32

./: .gitignore  CMakeLists.txt  sdkconfig
main/: CMakeLists.txt  display_config.h  idf_component.yml  main.c
main/icons/: icons.c  icons.h
main/images/: images.c  images.h
main/menu/: menu.c  menu.h
main/net/: trigger.c  trigger.h  wifi_ctrl.c  wifi_ctrl.h  ws_handler.c  ws_handler.h
main/power/: battery.c  battery.h
main/render/: render.c  render.h
main/sleep/: sleep.c  sleep.h
main/startup/: startup.c  startup.h
main/steps/: step_digest.c  step_sntp.c  step_wifi.c  step_wss.c  steps.h
main/tls/: certs.c  certs.h
main/util/: mac_store.c  mac_store.h  room_id.c  room_id.h
