idf_component_register(
    SRCS
        "main.c"
        "steps/step_wifi.c"
        "steps/step_sntp.c"
        "steps/step_digest.c"
        "sleep/sleep.c"
        "menu/menu.c"
        "icons/icons.c"
        "render/render.c"
        "startup/startup.c"
        "net/wifi_ctrl.c"
        "net/trigger.c"
        "power/battery.c"
        "images/images.c"
        "tls/certs.c"
        "util/room_id.c"
    INCLUDE_DIRS
        "."
        "steps"
        "menu"
        "sleep"
        "icons"
        "render"
        "startup"
        "net"
        "power"
        "images"
        "tls"
        "util"
    REQUIRES esp_wifi esp_event nvs_flash esp_netif esp_http_client esp-tls esp_jpeg driver esp_lcd esp_adc json)
